# one-sentence-summaries

./: .gitignore  README.md  open_library.py  pyproject.toml
data/: exclude_words.txt  one-sentence-summaries-en-20000.json
